data/all_generated_tests/raw_wast_tests/call_indirect_ImproperFunctionCallorReturnHandling_4458.wast
;; 7. **Test Description:** Implement tests where `call_indirect` instructions differentiate based on a type index that references invalid or non-existent function types to ensure proper trap triggering.    - **Constraint:** Validates type index referencing and existence.    - **Improper Handling Relation:** Invalid type index choice could bypass function type checks leading to inappropriate function execution.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (func $invalid-type-index
      (call_indirect (type 1) (i32.const 0))
    )
  )
  "type index out of bounds"
)